FC-90 implements User entity (#57)
* FC-90 updates db with liquibase

* FC-91 adds User entity

implements BaseEntity on all other entities (except Card yet)

* FC-91 can't manage BaseEntity on Card

* FC-92 adds UserStatsResponse

* FC-91 ties User to linked entities